skills hover on mobile fix and padding on para

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -180,6 +180,7 @@ hr {
 #para2 {
     background-color: white;
     min-height: 100%;
+    padding-bottom: 5%;
 }
 
 #para3 {
@@ -471,6 +472,47 @@ span:hover {
         transform: translateZ(-1px) scale(2);
         z-index: -1;
     }
+    input[type=checkbox]{
+        height: 0;
+        width: 0;
+        visibility: hidden;
+    }
+    
+    label {
+        cursor: pointer;
+        text-indent: -9999px;
+        width: 50px;
+        height: 30px;
+        background: #333333;
+        display: block;
+        border-radius: 100px;
+        position: relative;
+    }
+    
+    label:after {
+        content: '';
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        width: 20px;
+        height: 20px;
+        background: #fff;
+        border-radius: 90px;
+        transition: 0.3s;
+    }
+    
+    input:checked + label {
+        background: #666666;
+    }
+    
+    input:checked + label:after {
+        left: calc(100% - 5px);
+        transform: translateX(-100%);
+    }
+    
+    label:active:after {
+        width: 20px;
+    }
   }
 
   @media only screen and (max-width: 700px) {
@@ -564,7 +606,7 @@ span:hover {
     float: right;
 }
 
-input[type=checkbox]{
+/* input[type=checkbox]{
 	height: 0;
 	width: 0;
 	visibility: hidden;
@@ -604,7 +646,7 @@ input:checked + label:after {
 
 label:active:after {
 	width: 20px;
-}
+} */
 
 #tag {
     float: right;
